# tred

./: .gitignore  json.trd  test.trd
example/: Cargo.toml
example/src/: bfzero.trd  json.rs  main.rs  parse.rs
tred-boot/: Cargo.toml  tred.trd
tred-boot/src/: main.rs  tred.rs  tred.trd
tred-example/: Cargo.toml
tred-example/src/: tred.rs  tred.trd
tred-lib/: Cargo.toml
tred-lib/src/: lib.rs
tredc/: Cargo.toml
tredc/src/: compile.rs  main.rs  newparse.rs  parse.rs  parse.trd
tredlib/: Cargo.toml
tredlib/src/: gen.rs  lib.rs
