[package]
name = "tredc"
version = "0.1.0"
authors = ["Sam Sartor <me@samsartor.com>"]

[features]
default = ["aster/with-syntex", "syntex_syntax"]
nightly = []

[dependencies]
tredlib = { path = "../tredlib" }
aster = { version = "*", default_features = false }
syntex_syntax = { version = "*", optional = true }
lazy_static = "0.2.2"
unescape = "0.1.0"